<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_v4"
    android:padding="@dimen/padding_v4"
    app:cardCornerRadius="@dimen/card_corner_radius_v8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_v4"
        android:orientation="vertical"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:text="@string/full_name"
                style="@style/myStyle_hintText"/>

            <TextView
                android:id="@+id/tvFullName"
                style="@style/myText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:text="@string/city_name"
                style="@style/myStyle_hintText"/>

            <TextView
                android:id="@+id/tvCityName"
                style="@style/myText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:text="@string/email_id"
                style="@style/myStyle_hintText"/>

            <TextView
                android:id="@+id/tvEmailId"
                style="@style/myText"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>